<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:defaultValue="512"
            app:dialogMessage="@string/length_tips"
            app:icon="@drawable/ic_length"
            app:key="gpt_length"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="text-davinci-003"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:icon="@drawable/ic_model"
            app:key="gpt_model"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/image_gpt">

        <ListPreference
            app:defaultValue="256x256"
            app:entries="@array/image_size"
            app:entryValues="@array/image_size_data"
            app:icon="@drawable/ic_image"
            app:key="image_definition"
            app:title="@string/image_size"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="inner"
            app:entries="@array/image_download"
            app:entryValues="@array/image_download_data"
            app:icon="@drawable/ic_download"
            app:key="image_download"
            app:title="@string/image_download"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_delete"
            app:key="delete_sync"
            app:summaryOff="@string/image_delete_sync_off"
            app:summaryOn="@string/image_delete_sync_on"
            app:title="@string/image_delete_sync" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_storage"
            app:key="store"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_clear"
            app:key="clear_input"
            app:summaryOff="@string/clear_input_off"
            app:summaryOn="@string/clear_input_on"
            app:title="@string/clear_input" />

    </PreferenceCategory>

</PreferenceScreen>