<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/normal_menu_model">
        <menu>
            <item
                android:id="@+id/normal_chat"
                android:icon="@drawable/ic_completion"
                android:title="@string/normal_menu_chat" />
            <item
                android:id="@+id/normal_image"
                android:icon="@drawable/ic_draw"
                android:title="@string/normal_menu_draw" />
            <item
                android:id="@+id/normal_py2zh"
                android:icon="@drawable/ic_py2zh"
                android:title="@string/normal_menu_py2zh" />
            <item
                android:id="@+id/normal_keywords"
                android:icon="@drawable/ic_keywords"
                android:title="@string/keywords_app" />
        </menu>
    </item>
    <item
        android:id="@+id/normal_settings"
        android:title="@string/normal_menu_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/normal_about"
        android:title="@string/normal_menu_about"
        app:showAsAction="never" />
</menu>